[package]
name = "clonable_services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
